Add FXML layout for flight date change and corresponding CSS styles
- Created a new FXML file for the flight date change interface, including labels, table view for available flights, and action buttons.
- Added a new CSS file to style the application, including root styles, button styles, table view styles, and input field styles.
- Included a backup JSON file with user, flight, and ticket data for testing purposes.